@startuml
title Mediator Pattern - Chat Room

interface ChatMediator {
    + sendMessage(msg: String, user: User)
    + addUser(user: User)
}

class ChatMediatorImpl {
    - users: List<User>
    + sendMessage(msg: String, user: User)
    + addUser(user: User)
}

abstract class User {
    # mediator: ChatMediator
    # name: String
    + send(msg: String)
    + receive(msg: String)
}

class UserImpl {
    + send(msg: String)
    + receive(msg: String)
}

class Application {
    + main(args: String[])
}

ChatMediator <|.. ChatMediatorImpl
User <|-- UserImpl

ChatMediatorImpl --> User : mantém lista
User --> ChatMediator : usa

Application --> ChatMediatorImpl
Application --> UserImpl
@enduml
